// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "const": false,
  "default": undefined,
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "name": "object",
  },
  "usage": "public object RepositoryCatalogData { get; set; }",
}
`;

exports[`csharp snapshot 2`] = `
" \`RepositoryCatalogData\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"csharp\\">
public object RepositoryCatalogData { get; set; }
</pre>

- *Type:* object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "const": false,
  "default": undefined,
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "name": "java.lang.Object",
  },
  "usage": "public java.lang.Object getRepositoryCatalogData();",
}
`;

exports[`java snapshot 2`] = `
" \`repositoryCatalogData\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"java\\">
public java.lang.Object getRepositoryCatalogData();
</pre>

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "const": false,
  "default": undefined,
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_catalog_data",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "name": "typing.Any",
  },
  "usage": "repository_catalog_data: typing.Any",
}
`;

exports[`python snapshot 2`] = `
" \`repository_catalog_data\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"python\\">
repository_catalog_data: typing.Any
</pre>

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "const": false,
  "default": undefined,
  "docs": Object {
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "name": "any",
  },
  "usage": "public readonly repositoryCatalogData: any;",
}
`;

exports[`typescript snapshot 2`] = `
" \`repositoryCatalogData\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"typescript\\">
public readonly repositoryCatalogData: any;
</pre>

- *Type:* any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---
"
`;
